# GlazePad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.agents/skills/glazepad-docs-maintenance/: SKILL.md
.agents/skills/glazepad-docs-maintenance/agents/: openai.yaml
.agents/skills/glazepad-html-tauri-port/: SKILL.md
.agents/skills/glazepad-html-tauri-port/agents/: openai.yaml
.agents/skills/glazepad-windows-debug-loop/: SKILL.md
.agents/skills/glazepad-windows-debug-loop/agents/: openai.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: README.md  RELEASE_CHECKLIST.md  ROADMAP.md  design.md  development.md  interaction.md  product.md  release.md  roadmap.md  tech.md
docs/archive/: prototype-open-design.html
docs/prototypes/: final-open-design.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-web/: index.html
src-web/src/: App.tsx  ErrorBoundary.tsx  styles.css  tauri.ts
