[package]
name = "glazepad"
version = "0.1.0"
description = "GlazePad 透明暂存槽"
authors = ["GlazePad"]
edition = "2021"

[lib]
name = "glazepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-global-shortcut = "2.3.0"
uuid = { version = "1.19.0", features = ["v4"] }
